# Azure_lead_finder

find_owners/: README.md  pyproject.toml
find_owners/src/find_owners/: crew.py  main.py
find_owners/src/find_owners/config/: agents.yaml  tasks.yaml
